# prom

./: README.md  pyproject.toml
pm/: cli.py  config.py  output.py  utils.py
pm/commands/: actor.py  alerts.py  decide.py  idea.py  init.py  project.py  review.py  status.py  subproject.py  task.py
pm/db/: __init__.py  connection.py  schema.sql
pm/domain/: enforcement.py  health.py
