[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-cli"
version = "0.1.0"
description = "Project brain CLI for AI-human collaboration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["typer>=0.9.0"]

[project.scripts]
pm = "pm.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pm*"]
